--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "qirlib"
-version = "0.10.5"
-edition = "2021"
-license = "MIT"
 description = "Base Profile QIR library"
-build = "build.rs"
 readme = "README.md"
-homepage = "https://github.com/qir-alliance/pyqir"
-repository = "https://github.com/qir-alliance/pyqir"
-rust-version = "1.64"
+authors.workspace = true
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [dependencies]
 bitvec = "1.0"
@@ -18,6 +17,7 @@ llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
 llvm-sys-120 = { package = "llvm-sys", version = "120.3", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.1", optional = true }
 llvm-sys-140 = { package = "llvm-sys", version = "140.1", optional = true }
+llvm-sys-150 = { package = "llvm-sys", version = "150.2", optional = true }
 log = "0.4"
 mut_static = "5.0"
 
@@ -37,6 +37,7 @@ llvm11-0 = ["llvm-sys-110"]
 llvm12-0 = ["llvm-sys-120"]
 llvm13-0 = ["llvm-sys-130"]
 llvm14-0 = ["llvm-sys-140"]
+llvm15-0 = ["llvm-sys-150"]
 
 # default to use llvm-sys for llvm linking
 default = ["external-llvm-linking"]
@@ -48,6 +49,7 @@ llvm11-0-no-llvm-linking = ["llvm11-0", "no-llvm-linking", "llvm-sys-110/disable
 llvm12-0-no-llvm-linking = ["llvm12-0", "no-llvm-linking", "llvm-sys-120/disable-alltargets-init", "llvm-sys-120/no-llvm-linking"]
 llvm13-0-no-llvm-linking = ["llvm13-0", "no-llvm-linking", "llvm-sys-130/disable-alltargets-init", "llvm-sys-130/no-llvm-linking"]
 llvm14-0-no-llvm-linking = ["llvm14-0", "no-llvm-linking", "llvm-sys-140/disable-alltargets-init", "llvm-sys-140/no-llvm-linking"]
+llvm15-0-no-llvm-linking = ["llvm15-0", "no-llvm-linking", "llvm-sys-150/disable-alltargets-init", "llvm-sys-150/no-llvm-linking"]
 
 no-llvm-linking = []
 
@@ -57,6 +59,7 @@ llvm11-0-qirlib-llvm-linking = ["llvm11-0", "qirlib-llvm-linking", "llvm-sys-110
 llvm12-0-qirlib-llvm-linking = ["llvm12-0", "qirlib-llvm-linking", "llvm-sys-120/disable-alltargets-init", "llvm-sys-120/no-llvm-linking"]
 llvm13-0-qirlib-llvm-linking = ["llvm13-0", "qirlib-llvm-linking", "llvm-sys-130/disable-alltargets-init", "llvm-sys-130/no-llvm-linking"]
 llvm14-0-qirlib-llvm-linking = ["llvm14-0", "qirlib-llvm-linking", "llvm-sys-140/disable-alltargets-init", "llvm-sys-140/no-llvm-linking"]
+llvm15-0-qirlib-llvm-linking = ["llvm15-0", "qirlib-llvm-linking", "llvm-sys-150/disable-alltargets-init", "llvm-sys-150/no-llvm-linking"]
 
 qirlib-llvm-linking = []
 
