--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -17,7 +17,7 @@ llvm-sys-120 = { package = "llvm-sys", version = "120.3", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.1", optional = true }
 llvm-sys-140 = { package = "llvm-sys", version = "140.1", optional = true }
 llvm-sys-150 = { package = "llvm-sys", version = "150.2", optional = true }
-pyo3 = { version = "0.22", features = ["abi3-py38", "extension-module"] }
+pyo3 = { version = "0.22", features = ["abi3-py38", "extension-module", "gil-refs"] }
 qirlib = { path = "../qirlib" }
 
 [features]
