--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -65,6 +65,8 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     sdl:
+      autobaseline:
+        enableForGitHub: true
       sourceAnalysisPool:
         name: 'Azure-Pipelines-DevTools-EO'
         image: windows-2022
