--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ license = "MIT"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
 
+[workspace.dependencies]
+const-str = "0.6"
+pyo3 = { version = "0.24", features = ["abi3-py39", "extension-module"] }
