--- a/deny.toml
+++ b/deny.toml
@@ -15,7 +15,7 @@ allow = [
     "Apache-2.0 WITH LLVM-exception",
     "BSD-3-Clause",
     "MIT",
-    "Unicode-DFS-2016",
+    "Unicode-3.0",
 ]
 
 [sources.allow-org]
