--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -11,13 +11,13 @@ repository.workspace = true
 
 
 [dependencies]
-const-str = "0.5"
+const-str = { workspace = true }
+pyo3 = { workspace = true }
 llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
 llvm-sys-120 = { package = "llvm-sys", version = "120.3", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.1", optional = true }
 llvm-sys-140 = { package = "llvm-sys", version = "140.1", optional = true }
 llvm-sys-150 = { package = "llvm-sys", version = "150.2", optional = true }
-pyo3 = { version = "0.24", features = ["abi3-py39", "extension-module"] }
 qirlib = { path = "../qirlib" }
 
 [features]
