--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -10,16 +10,12 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-bitvec = "1.0"
-const-str = "0.5"
-lazy_static = "1.4"
+const-str = { workspace = true }
 llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
 llvm-sys-120 = { package = "llvm-sys", version = "120.3", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.1", optional = true }
 llvm-sys-140 = { package = "llvm-sys", version = "140.1", optional = true }
 llvm-sys-150 = { package = "llvm-sys", version = "150.2", optional = true }
-log = "0.4"
-mut_static = "5.0"
 
 [dev-dependencies]
 normalize-line-endings = "0.3"
@@ -27,7 +23,6 @@ normalize-line-endings = "0.3"
 [build-dependencies]
 cmake = "0.1"
 cc = "1.0"
-lazy_static = "1.4"
 
 [lib]
 name = "qirlib"
