Use explicit ADO images

--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -50,14 +50,14 @@ parameters:
     arch: aarch64
   - name: mac_universal
     poolName: 'Azure Pipelines'
-    imageName: 'macOS-latest'
+    imageName: 'macOS-14'
     os: macOS
     arch: universal
     ARCHFLAGS: '-arch arm64 -arch x86_64'
     additionalRustTargets: aarch64-apple-darwin
   - name: windows_x86_64
     poolName: 'Azure-Pipelines-DevTools-EO'
-    imageName: 'windows-latest'
+    imageName: 'windows-2022'
     os: windows
     arch: x86_64
 
