--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -194,8 +194,8 @@ extends:
             condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'), ne(variables['Agent.OS'], 'Darwin'))
 
           - script: |
-              echo "env ARCHFLAGS='$(ARCHFLAGS)' ./build.ps1 -t install-llvm-from-source"
-              env ARCHFLAGS="$(ARCHFLAGS)" ./build.ps1 -t install-llvm-from-source
+              echo "env ARCHFLAGS='$(ARCHFLAGS)' LLVM_NATIVE_TOOL_DIR='$(brew --prefix llvm@18)/bin' ./build.ps1 -t install-llvm-from-source"
+              env ARCHFLAGS="$(ARCHFLAGS)" LLVM_NATIVE_TOOL_DIR="$(brew --prefix llvm@18)/bin" ./build.ps1 -t install-llvm-from-source
             displayName: Build and Install LLVM
             condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'), eq(variables['Agent.OS'], 'Darwin'))
 
