Remove native tool dir, try reversing order on arches

--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -53,7 +53,7 @@ parameters:
     imageName: 'macOS-15'
     os: macOS
     arch: universal
-    ARCHFLAGS: '-arch arm64 -arch x86_64'
+    ARCHFLAGS: '-arch x86_64 -arch arm64'
     additionalRustTargets: aarch64-apple-darwin
   - name: windows_x86_64
     poolName: 'Azure-Pipelines-DevTools-EO'
@@ -194,9 +194,8 @@ extends:
             condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'), ne(variables['Agent.OS'], 'Darwin'))
 
           - script: |
-              $(brew --prefix llvm@18)/bin/llvm-tblgen --help
-              echo "env ARCHFLAGS='$(ARCHFLAGS)' LLVM_NATIVE_TOOL_DIR='$(brew --prefix llvm@18)/bin' ./build.ps1 -t install-llvm-from-source"
-              env ARCHFLAGS="$(ARCHFLAGS)" LLVM_NATIVE_TOOL_DIR="$(brew --prefix llvm@18)/bin" ./build.ps1 -t install-llvm-from-source
+              echo "env ARCHFLAGS='$(ARCHFLAGS)' ./build.ps1 -t install-llvm-from-source"
+              env ARCHFLAGS="$(ARCHFLAGS)" ./build.ps1 -t install-llvm-from-source
             displayName: Build and Install LLVM
             condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'), eq(variables['Agent.OS'], 'Darwin'))
 
